--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,17 +34,19 @@ jobs:
       run: |
           set -e
           sh install.sh
-              . "${HOME}/.gdrive-downloader/gdrive-downloader.binpath"
+              PATH="${HOME}/.gdrive-downloader:${PATH}"
               gdl --info
           sh install.sh -U && sh install.sh --posix
-              . "${HOME}/.gdrive-downloader/gdrive-downloader.binpath"
+              PATH="${HOME}/.gdrive-downloader:${PATH}"
               gdl --info
           sh install.sh -U  && sh install.sh -c custom_gdl
-              . "${HOME}/.gdrive-downloader/gdrive-downloader.binpath"
+              PATH="${HOME}/.gdrive-downloader:${PATH}"
               custom_gdl --info
-    - name: 'Download'
+    - name: 'Merge and Download test'
       if: steps.filter.outputs.download == 'true'
       run: |
           set -e
+          sh merge.sh
+          { [ -n "$(git diff)" ] && printf "%s\n" "Error: Run merge.sh before pushing the commits" && exit 1 ;} || :
           brew reinstall bash 2> /dev/null 1>&2 || :
           sh test.sh
